changes half day 3

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         Santa get to all houses!
         Make sure he does not crash...
         You don't want to ruin Christmas!</p>
-    </div>
+    
+    <h1> Score:<span id="score">0</span></h1>
+  </div>
     <!-- SPLASH SCREEN -->
     <div id="splash-screen" class="container">
      
