latest bug fixes

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
    
     <!-- SPLASH SCREEN -->
     <div id="splash-screen" class="container">
-      <h1><i>Time is running out!</i></h1>
+      <h1>Santa's Little Helper</h1>
       
       <div class="intro-row">
 
         <div class="what-to-do">
          
-          <p>We need to get Sant to all the houses, but he's having trouble with his sleigh!</p>
+          <p>We need to get Santa to all the houses, but he's having trouble with his sleigh!</p>
           <p>Make sure he does not crash! Help keep him on route with <i>Arrow Up.</i></p>
           <p>He also needs help with the gifts, so hit <i>Space</i> to deliver them.</p>
           <p>Make sure they get to the houses - you lose points for lost gifts!</p>
@@ -55,7 +55,7 @@
      <div id="congrats-screen" class="container">
       <img src="./images/pngwing.com.png" width="700" alt="Congratulations">
       <p class="congrats-txt">You did an amazing job! Santa is very happy you helped!</p>
-      <button id="restart-btn">Play Again!</button>
+      <button id="restart-btn2">Play Again!</button>
     </div>
 
   </div>
