adding footer - final changes - hopefully

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
   </div>
-
+  <footer>created by @annemedan</footer>
 
   <script src="./main.js"></script>
   <script src="./game.js"></script>
